--- a/wetter/weather_data.html
+++ b/wetter/weather_data.html
@@ -52,7 +52,7 @@ td.border {border-left:solid 1px #DDDDDD;border-right:solid 1px #000000;border-b
 			<a href="mpi_roof.zip">ZIP-file 01.07.2021 up to today</a><br />
 			<a href="mpi_roof_2021a.zip">ZIP-file 01.01.2021 to 30.06.2021</a><br />
 			<a href="mpi_roof_2020b.zip">ZIP-file 01.07.2020 to 31.12.2020</a><br />
-			<a href="mpi_roof_2020a.zip">ZIP-file 01.01.2020 to 30.06.2020</a><br />
+			<a href="/mpi_roof_2020a.zip">ZIP-file 01.01.2020 to 30.06.2020</a><br />
 			<a href="mpi_roof_2019b.zip">ZIP-file 01.07.2019 to 31.12.2019</a><br />
 			<a href="mpi_roof_2019a.zip">ZIP-file 01.01.2019 to 30.06.2019</a><br />
 			<a href="mpi_roof_2018b.zip">ZIP-file 01.07.2018 to 31.12.2018</a><br />
